--- a/airway/package.json
+++ b/airway/package.json
@@ -19,7 +19,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "db:view": "node view-database.js",
-    "db:connect": "docker-compose exec postgres psql -U airway_user -d airway_db"
+    "db:connect": "docker-compose exec postgres psql -U airway_user -d airway_db",
+    "opensearch:reindex": "node reindex-flights.js",
+    "test:concurrent-bookings": "node simulate-concurrent-bookings.js"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -31,6 +33,7 @@
     "@nestjs/sequelize": "^10.0.1",
     "@nestjs/swagger": "^7.1.17",
     "@opensearch-project/opensearch": "^2.4.0",
+    "axios": "^1.13.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
